<resources>
    <string name="app_name">MenuApp</string>
    <string name="the_easiest_way_to_order">The easiest way to order</string>
    <string name="welcome_message">Welcome to Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_lines_no_waiting">No lines. No waiting.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="empty_email_field">Email field is empty, please fill it out.</string>
    <string name="empty_password_field">Password field is empty, please fill it out.</string>
    <string name="invalid_email_format">Email format isn\'t valid, please check if you enter your email correctly</string>
    <string name="successfully_logged_in">Successfully logged in!</string>
    <string name="wrong_credentials">Your credentials are wrong, please try again!</string>
    <string name="something_went_wrong">Something went wrong, please try again!</string>
    <string name="connection_lost">Connection lost</string>
    <string name="checking_credentials">Checking credentials...</string>
    <string name="unknown">Unknown</string>
    <string name="temporarily_unavailable_for_digital_orders">Temporarily unavailable for digital orders</string>
    <string name="today_open_24">Today open 24</string>
    <string name="today">Today </string>
    <string name="closed">Closed</string>
    <string name="fetching_data">Fetching data, please wait...</string>
    <string name="dialog_error_text">Something went wrong while fetching venues data, please restart application and try again.</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="no_data">There are no data for selected Venue, please try again.</string>
</resources>